Bug 266369 - improper text and/or coloring of tab after reordering
Summary: improper text and/or coloring of tab after reordering
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: tabbing (other bugs)
Version First Reported In: 4.6.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 290988 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-15 11:46 UTC by Mykola Krachkovsky
Modified: 2012-01-28 05:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mykola Krachkovsky 2011-02-15 11:46:15 UTC
Version:           4.6.0 (using KDE 4.6.0) 
OS:                Linux

After tab reordering updating of tab leads to improper tab text coloring and sometimes to improper text on it.

Reproducible: Always

Steps to Reproduce:
1.1. Open site in tab, e.g. kde.org
1.2. Open second tab and another site, e.g. google.com
1.3. Open third tab with, e.g. kernel.org
(tabs are: kde.org, google.com, kernel.org)
2. Move kernel.org tab to first place, now they are: kernel.org, kde.org, google.com
3. Update current (kernel.org) tab.

Actual Results:  
Third (google.com) tab would be hilighted. Sometimes even text on tab replaced with text of tab been reloaded but I don't find stable test case to reproduce this.

Expected Results:  
First (kde.org) tab have to be hilighted and text of it updated too.
Comment 1 Mykola Krachkovsky 2011-04-21 05:57:09 UTC
4.6.2
Bug present. Would it be fixed?
Comment 2 Mykola Krachkovsky 2011-07-08 07:40:07 UTC
4.7 RC1
Bug is present.
Comment 3 Mykola Krachkovsky 2011-07-20 10:58:06 UTC
4.7 RC2
Still reproducable.
Comment 4 Dawit Alemayehu 2012-01-19 21:04:41 UTC
*** Bug 290988 has been marked as a duplicate of this bug. ***
Comment 5 Dawit Alemayehu 2012-01-27 15:42:41 UTC
Git commit 349264ee404c8a6b3d4cba4ee5c67df0982e97e0 by Dawit Alemayehu.
Committed on 22/01/2012 at 19:12.
Pushed by adawit into branch 'KDE/4.8'.

Moving tabs causes wrong tab to be highlighted upon reload.
FIXED-IN: 4.8.1
REVIEW: 103740

M  +3    -0    konqueror/src/konqtabs.cpp

http://commits.kde.org/kde-baseapps/349264ee404c8a6b3d4cba4ee5c67df0982e97e0
Comment 6 Dawit Alemayehu 2012-01-27 15:44:15 UTC
Git commit 92385ff42503710f7b47954776a4fc1fe0637fbb by Dawit Alemayehu.
Committed on 22/01/2012 at 19:12.
Pushed by adawit into branch 'master'.

Moving tabs causes wrong tab to be highlighted upon reload.
FIXED-IN: 4.8.1
REVIEW: 103740
(cherry picked from commit 349264ee404c8a6b3d4cba4ee5c67df0982e97e0)

M  +3    -0    konqueror/src/konqtabs.cpp

http://commits.kde.org/kde-baseapps/92385ff42503710f7b47954776a4fc1fe0637fbb
Comment 7 Mykola Krachkovsky 2012-01-27 16:01:56 UTC
Thanks for fixing! Waiting for 4.8.1 :)
Comment 8 Anguo 2012-01-28 05:24:03 UTC
Thank you Dawit for the fix!
:)