Moving tabs causes wrong tab to be highlighted upon reload.

BUG: 266369
FIXED-IN: 4.8.1
REVIEW: 103740
(cherry picked from commit 349264ee404c8a6b3d4cba4ee5c67df0982e97e0)