konqueror/src/konqtabs.cpp
@@ -112,6 +112,9 @@ KonqFrameTabs::KonqFrameTabs(QWidget* parent, KonqFrameContainerBase* parentCont
 
   setAutomaticResizeTabs( true );
   setMovable( true );
+
+  connect( tabBar(), SIGNAL(tabMoved(int,int)),
+           SLOT(slotMovedTab(int,int)) );
   connect( this, SIGNAL(movedTab(int,int)),
            SLOT(slotMovedTab(int,int)) );
   connect( this, SIGNAL(mouseMiddleClick()),
